# chip8

./: CMakeLists.txt  README.md  info.md  main.c
resources/rom/: Deflap (fix)(by hitcherland)(2015).ch8
src/: CPU.c  CPU.h  Sound.c  Sound.h  emulator.c  emulator.h  super_chip.c  super_chip.h
src/SDL2/cmake/: sdl2-config.cmake
src/SDL2_ttf/cmake/: sdl2_ttf-config.cmake
